# Hackaton-VendimiaTech-

./: README.md
.agents/workflows/: hackatonrules.md
.keys/: addresses.env  aurum_contract_id.txt  gold_contract_id.txt  oracle_contract_id.txt
contracts/: Cargo.toml
contracts/aurum/src/: lib.rs
contracts/aurum/test_snapshots/test/: test_initialize.1.json  test_multiple_payments.1.json  test_pay_with_rwa.1.json  test_payment_preview.1.json  test_update_oracle_price.1.json
contracts/oracle/: Cargo.toml
contracts/oracle/src/: lib.rs
docs/: STELLAR_STACK.md
scripts/: build_and_deploy.sh  create_assets.sh  demo_flow.sh  oracle_feeder.sh
