[package]
name = "oracle"
description = "MOCK-ORACLE - A simple key-value price store Oracle contract"
version = "0.1.0"
edition = "2021"
rust-version = "1.89.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "25.3.0" }

[dev-dependencies]
soroban-sdk = { version = "25.3.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
